# cpp_code

./: README.md  run.sh
SFINAE/: CMakeLists.txt  customer_class.h  decltype_SFINAE.cpp  enable_if_SFINAE.cpp  raw_SFINAE.cpp  tag_dispatch_SFINAE.cpp
any/: CMakeLists.txt  callback1.cpp  callback2.cpp  event_source.hpp  main.cpp  usage_any.cpp
class_template/: CMakeLists.txt  auto_template_arg.cpp  data_member_pointer.cpp  decl_class_template.cc  partial_specialization.cpp  template_arg.cpp
compile_time/: CMakeLists.txt  If_deduction.cpp  While_deduction.cpp  compile_time.cpp  fmap.cpp
constexpr/: CMakeLists.txt  ctor_constexpr.cpp  example_constexpr.cpp  static_const.cpp  value_constexpr.cpp
example/: CMakeLists.txt  example.cpp  example1.cpp  example2.cpp  template.hpp
func_template/: CMakeLists.txt  arg_deduction.cpp  decl_func_template.cc
if_constexpr/: CMakeLists.txt  enable_if.cpp  if_constexpr.cpp  return_auto.cpp  specialization.cpp
inline/: CMakeLists.txt  counter.h  main.cpp  static_const.cpp  test.cpp
lambda/: CMakeLists.txt  constexpr_lambda.cpp  test_lambda.cpp  this_lambda.cpp
rvalue_reference/: CMakeLists.txt  RAII.cpp  auto_ptr.h  collapse.cpp  raw_ptr.cpp  rvalue_ref.cpp  shape.h  shared_ptr.cpp  smart_ptr.h
singleton/: CMakeLists.txt  atomic_singleton.cpp  atomic_singleton.h  local_static_singleton.cpp  local_static_singleton.h  pthread_singleton.cpp  pthread_singleton.h  test_atomic_singleton.cpp  test_local_static_singleton.cpp  test_pthread_singleton.cpp
thread/: CMakeLists.txt  async_resolution.cpp  deadlock_bug.cpp  detach_resolution.cpp  nojoin_bug.cpp  synchronization_bug.cpp  thread_case.cpp
trivial/: CMakeLists.txt  attribute.cpp  declval.cpp  define.cpp  enum.cc  noexcept.cpp  overload.cpp  sizeof.cpp
utility_header/: CMakeLists.txt  istream_line.h  output.h  test_output.cpp
variadic/: CMakeLists.txt  SFINAE_variadic.cpp  _test_raw_variadic.cpp  auto_variadic.cpp  raw_variadic.cpp  template_variadic.cpp
